link tests refactoring