@@ -3,19 +3,18 @@ import jdk.jfr.Description;
 import org.apache.log4j.Logger;
 import org.testng.annotations.Test;
 import org.testng.asserts.SoftAssert;
-import pages.HomePage;
-import pages.NavigationHeaderUtilityPage;
-import pages.NavigationMainPage;
+import pages.*;
 import utils.LangValue;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static io.restassured.RestAssured.given;
+import static utils.LangValue.*;
 
 public class MainTest extends BaseTest {
     private static final Logger LOGGER = Logger.getLogger(MainTest.class);
@@ -24,12 +23,11 @@ public class MainTest extends BaseTest {
     @Test(description = "Check languages links", enabled = true)
     public void languagesLinksTest() {
         SoftAssert softAssert = new SoftAssert();
-        HomePage homePage = new HomePage(getDriver());
-        homePage.openHomePage(URL);
-        String currentLanguage = homePage.getLanguageText();
+        getDriver().get(URL);
+        LanguageChooser languageChooser = new LanguageChooser(getDriver());
+        String currentLanguage = languageChooser.getSelectedLanguageText();
         LOGGER.info(String.format("Current language is %s", currentLanguage));
-        NavigationHeaderUtilityPage navigationHeaderUtilityPage = new NavigationHeaderUtilityPage(getDriver());
-        Map<String, String> languagesLinksMap = navigationHeaderUtilityPage.getLanguagesMap();
+        Map<String, String> languagesLinksMap = languageChooser.getLanguagesMap();
         for (Map.Entry<String, String> languageLink : languagesLinksMap.entrySet()) {
             String examLink = languageLink.getValue();
             Matcher contextMatcher = contentPattern.matcher(examLink);
@@ -37,28 +35,29 @@ public class MainTest extends BaseTest {
         }
 
         for (LangValue langValue : LangValue.values()) {
-            String nv = langValue.languageValue;
-            if (langValue.languageValue.equals(currentLanguage) || langValue.equals(LangValue.INDIAN)) {
+            if (langValue.name.equals(currentLanguage) || langValue.equals(INDIAN)) {
                 continue;
             }
-            if (langValue.equals(LangValue.CHINES)) {
-                String link = languagesLinksMap.get(langValue.languageValue);
+            if (langValue.equals(CHINESE)) {
+                String link = languagesLinksMap.get(langValue.name);
                 LOGGER.info(String.format("Link value : %s", link));
                 linkAPIChecks(softAssert, link);
-                String patt = "." + langValue.langMeaning;
+                String patt = "." + langValue.code;
                 Pattern pattern = Pattern.compile(patt);
                 Matcher linkStructMatcher = pattern.matcher(link);
-                softAssert.assertTrue(linkStructMatcher.find(), String.format("Link for Chines %s is not contain short description %s", link, patt));
+                softAssert.assertTrue(linkStructMatcher.find(),
+                        String.format("Link for Chines %s is not contain short description %s", link, patt));
                 continue;
             }
-            String langLink = languagesLinksMap.get(langValue.languageValue);
+            String langLink = languagesLinksMap.get(langValue.name);
             LOGGER.info(String.format("Link value : %s", langLink));
             linkAPIChecks(softAssert, langLink);
-            String mc = langValue.langMeaning;
+            String mc = langValue.code;
             String patWord = ".com/" + mc;
             Pattern pattern = Pattern.compile(patWord);
             Matcher linkStructMatcher = pattern.matcher(langLink);
-            softAssert.assertTrue(linkStructMatcher.find(), String.format("Link %s is not contain short description %s", langLink, mc));
+            softAssert.assertTrue(linkStructMatcher.find(),
+                    String.format("Link %s is not contain short description %s", langLink, mc));
         }
 
         softAssert.assertAll();
@@ -67,28 +66,31 @@ public class MainTest extends BaseTest {
     @Test(description = "Check navigation header utility links for default language", enabled = true)
     public void navigationHeaderUtilityLinksDefaultLanguageTest() {
         SoftAssert softAssert = new SoftAssert();
-        HomePage homePage = new HomePage(getDriver());
-        homePage.openHomePage(URL);
-        String currentLanguage = homePage.getLanguageText();
+        getDriver().get(URL);
+        LanguageChooser languageChooser = new LanguageChooser(getDriver());
+        String currentLanguage = languageChooser.getSelectedLanguageText();
         String currentLanguageMeaning;
-        List<String> shortDescriptionsList = new ArrayList<String>();
+        List<String> shortDescriptionsList = new ArrayList<>();
         LOGGER.info(String.format("Current language is %s", currentLanguage));
         for (LangValue langValue : LangValue.values()) {
-            String nv = langValue.languageValue;
-            if (langValue.languageValue.equals(currentLanguage) || langValue.languageValue.equals(LangValue.INDIAN) || langValue.languageValue.equals(LangValue.CHINES)) {
-                currentLanguageMeaning = langValue.langMeaning;
+            if (langValue.name.equals(currentLanguage) || langValue.equals(INDIAN) || langValue.equals(CHINESE)) {
+                currentLanguageMeaning = langValue.code;
                 LOGGER.info(String.format("Language meaning is %s", currentLanguageMeaning));
                 continue;
             }
-            shortDescriptionsList.add(langValue.langMeaning);
+            shortDescriptionsList.add(langValue.code);
         }
-        NavigationHeaderUtilityPage navigationHeaderUtilityPage = new NavigationHeaderUtilityPage(getDriver());
-        List<String> utilityHeaderLinks = navigationHeaderUtilityPage.getUtilityLinks();
-        utilityHeaderLinks.add(navigationHeaderUtilityPage.getLoginLink());
+        NavigationUtilityHeader navigationUtilityHeader = new NavigationUtilityHeader(getDriver());
+        LoginLink loginLink = new LoginLink(getDriver());
+        List<String> utilityHeaderLinks = new ArrayList<>(navigationUtilityHeader.getUtilityHeaderLinks());
+        utilityHeaderLinks.add(loginLink.getLoginUrl());
 
         String localisationFiltMean = "nutanix.com";
         String globalFiltMean = "nutanix.";
-        List<String> localisationLinksList = utilityHeaderLinks.stream().filter(o -> o.contains(localisationFiltMean)).collect(Collectors.toList());
+        List<String> localisationLinksList = utilityHeaderLinks
+                .stream()
+                .filter(o -> o.contains(localisationFiltMean))
+                .toList();
         for (String localisationLink : localisationLinksList) {
             linkAPIChecks(softAssert, localisationLink);
             linkContentChecks(softAssert, localisationLink);
@@ -97,11 +99,16 @@ public class MainTest extends BaseTest {
                 String patWord = String.format(".com/%s/", shortDescMainMainMenuLink);
                 Pattern pattern = Pattern.compile(patWord);
                 Matcher linkStructMatcher = pattern.matcher(localisationLink);
-                softAssert.assertFalse(linkStructMatcher.find(), String.format("Localisation link %s is not contain short description %s", localisationLink, shortDescMainMainMenuLink));
+                softAssert.assertFalse(linkStructMatcher.find(),
+                        String.format("Localisation link %s is not contain short description %s", localisationLink, shortDescMainMainMenuLink));
             }
         }
 
-        List<String> globalLinksList = utilityHeaderLinks.stream().filter(o -> !o.contains(localisationFiltMean)).filter(x -> x.contains(globalFiltMean)).collect(Collectors.toList());
+        List<String> globalLinksList = utilityHeaderLinks
+                .stream()
+                .filter(o -> !o.contains(localisationFiltMean))
+                .filter(x -> x.contains(globalFiltMean))
+                .toList();
         for (String globalLink : globalLinksList) {
             linkAPIChecks(softAssert, globalLink);
             linkContentChecks(softAssert, globalLink);
@@ -110,11 +117,16 @@ public class MainTest extends BaseTest {
                 String patWord = String.format(".com/%s/", shortDescMainMainMenuLink);
                 Pattern pattern = Pattern.compile(patWord);
                 Matcher linkStructMatcher = pattern.matcher(globalLink);
-                softAssert.assertFalse(linkStructMatcher.find(), String.format("Localisation link %s is not contain short description %s", globalLink, shortDescMainMainMenuLink));
+                softAssert.assertFalse(linkStructMatcher.find(),
+                        String.format("Localisation link %s is not contain short description %s", globalLink, shortDescMainMainMenuLink));
             }
         }
 
-        List<String> externalLinksList = utilityHeaderLinks.stream().filter(o -> !o.contains(localisationFiltMean)).filter(x -> !x.contains(globalFiltMean)).collect(Collectors.toList());
+        List<String> externalLinksList = utilityHeaderLinks
+                .stream()
+                .filter(o -> !o.contains(localisationFiltMean))
+                .filter(x -> !x.contains(globalFiltMean))
+                .toList();
         for (String externalLink : externalLinksList) {
             linkAPIChecks(softAssert, externalLink);
             linkContentChecks(softAssert, externalLink);
@@ -125,28 +137,29 @@ public class MainTest extends BaseTest {
     @Test(description = "Check navigation main menu links for default language", enabled = true)
     public void navigationMaimMenuLinksDefaultLanguageTest() {
         SoftAssert softAssert = new SoftAssert();
-        HomePage homePage = new HomePage(getDriver());
-        homePage.openHomePage(URL);
-        String currentLanguage = homePage.getLanguageText();
-        String currentLanguageMeaning;
+        getDriver().get(URL);
+        LanguageChooser languageChooser = new LanguageChooser(getDriver());
+        String currentLanguage = languageChooser.getSelectedLanguageText();
 
-        List<String> shortMainMenuDescriptionsList = new ArrayList<String>();
+        List<String> shortMainMenuDescriptionsList = new ArrayList<>();
         LOGGER.info(String.format("Current language is %s", currentLanguage));
         for (LangValue langValue : LangValue.values()) {
-            String nv = langValue.languageValue;
-            if (langValue.languageValue.equals(currentLanguage)) {
-                currentLanguageMeaning = langValue.langMeaning;
-                LOGGER.info(String.format("Default language meaning is %s", currentLanguageMeaning));
+            if (langValue.name.equals(currentLanguage)) {
+                String currentLanguageCode = langValue.code;
+                LOGGER.info(String.format("Default language code is [%s]", currentLanguageCode));
                 continue;
             }
-            shortMainMenuDescriptionsList.add(langValue.langMeaning);
+            shortMainMenuDescriptionsList.add(langValue.code);
         }
 
-        NavigationMainPage navigationMainPage = new NavigationMainPage(getDriver());
-        List<String> mainMenuLinks = navigationMainPage.getMainNavigationLinks();
+        MainNavigationHeader mainNavigationHeader = new MainNavigationHeader(getDriver());
+        List<String> mainMenuLinks = mainNavigationHeader.getNavigationTabLinks();
         String localisationFiltMean = "nutanix.com";
         String globalFiltMean = "nutanix.";
-        List<String> localisationLinksList = mainMenuLinks.stream().filter(o -> o.contains(localisationFiltMean)).collect(Collectors.toList());
+        List<String> localisationLinksList = mainMenuLinks
+                .stream()
+                .filter(o -> o.contains(localisationFiltMean))
+                .toList();
         for (String localisationLink : localisationLinksList) {
             linkAPIChecks(softAssert, localisationLink);
             linkContentChecks(softAssert, localisationLink);
@@ -155,10 +168,15 @@ public class MainTest extends BaseTest {
                 String patWord = String.format(".com/%s/", shortDescMainMainMenuLink);
                 Pattern pattern = Pattern.compile(patWord);
                 Matcher linkStructMatcher = pattern.matcher(localisationLink);
-                softAssert.assertFalse(linkStructMatcher.find(), String.format("Localisation link %s is not contain short description %s", localisationLink, shortDescMainMainMenuLink));
+                softAssert.assertFalse(linkStructMatcher.find(),
+                        String.format("Localisation link %s is not contain short description %s", localisationLink, shortDescMainMainMenuLink));
             }
         }
-        List<String> globalLinksList = mainMenuLinks.stream().filter(o -> !o.contains(localisationFiltMean)).filter(x -> x.contains(globalFiltMean)).collect(Collectors.toList());
+        List<String> globalLinksList = mainMenuLinks
+                .stream()
+                .filter(o -> !o.contains(localisationFiltMean))
+                .filter(x -> x.contains(globalFiltMean))
+                .toList();
         for (String globalLink : globalLinksList) {
             linkAPIChecks(softAssert, globalLink);
             linkContentChecks(softAssert, globalLink);
@@ -167,10 +185,15 @@ public class MainTest extends BaseTest {
                 String patWord = String.format(".com/%s/", shortDescMainMainMenuLink);
                 Pattern pattern = Pattern.compile(patWord);
                 Matcher linkStructMatcher = pattern.matcher(globalLink);
-                softAssert.assertFalse(linkStructMatcher.find(), String.format("Global link %s is not contain short description %s", globalLink, shortDescMainMainMenuLink));
+                softAssert.assertFalse(linkStructMatcher.find(),
+                        String.format("Global link %s is not contain short description %s", globalLink, shortDescMainMainMenuLink));
             }
         }
-        List<String> externalLinksList = mainMenuLinks.stream().filter(o -> !o.contains(localisationFiltMean)).filter(x -> !x.contains(globalFiltMean)).collect(Collectors.toList());
+        List<String> externalLinksList = mainMenuLinks
+                .stream()
+                .filter(o -> !o.contains(localisationFiltMean))
+                .filter(x -> !x.contains(globalFiltMean))
+                .toList();
         for (String externalLink : externalLinksList) {
             linkAPIChecks(softAssert, externalLink);
             linkContentChecks(softAssert, externalLink);
@@ -182,28 +205,34 @@ public class MainTest extends BaseTest {
     @Description("Check navigation main menu sub links for default language")
     public void navigationMaimMenuSubLinksDefaultLanguageTest() {
         SoftAssert softAssert = new SoftAssert();
-        HomePage homePage = new HomePage(getDriver());
-        homePage.openHomePage(URL);
-        String currentLanguage = homePage.getLanguageText();
+        getDriver().get(URL);
+        LanguageChooser languageChooser = new LanguageChooser(getDriver());
+        String currentLanguage = languageChooser.getSelectedLanguageText();
         String currentLanguageMeaning;
 
-        List<String> shortSubMainMenuDescriptionsList = new ArrayList<String>();
+        List<String> shortSubMainMenuDescriptionsList = new ArrayList<>();
         LOGGER.info(String.format("Current language is %s", currentLanguage));
         for (LangValue langValue : LangValue.values()) {
-            String nv = langValue.languageValue;
-            if (langValue.languageValue.equals(currentLanguage) || langValue.languageValue.equals(LangValue.INDIAN) || langValue.languageValue.equals(LangValue.CHINES)) {
-                currentLanguageMeaning = langValue.langMeaning;
+            if (langValue.name.equals(currentLanguage) || langValue.equals(INDIAN) || langValue.equals(CHINESE)) {
+                currentLanguageMeaning = langValue.code;
                 LOGGER.info(String.format("Default language meaning is %s", currentLanguageMeaning));
                 continue;
             }
-            shortSubMainMenuDescriptionsList.add(langValue.langMeaning);
+            shortSubMainMenuDescriptionsList.add(langValue.code);
         }
 
-        NavigationMainPage navigationMainPage = new NavigationMainPage(getDriver());
-        List<String> subMainMenuLinks = navigationMainPage.getMainNavigationSubLinks();
+        MainNavigationHeader mainNavigationHeader = new MainNavigationHeader(getDriver());
+        List<String> mainMenuSubLinks = mainNavigationHeader.getNavigationTabNames()
+                .stream()
+                .map(mainNavigationHeader::getNavigationTabSubLinks)
+                .flatMap(Collection::stream)
+                .toList();
         String localisationFiltMean = "nutanix.com";
         String globalFiltMean = "nutanix.";
-        List<String> localisationLinksList = subMainMenuLinks.stream().filter(o -> o.contains(localisationFiltMean)).collect(Collectors.toList());
+        List<String> localisationLinksList = mainMenuSubLinks
+                .stream()
+                .filter(o -> o.contains(localisationFiltMean))
+                .toList();
         for (String localisationLink : localisationLinksList) {
             linkAPIChecks(softAssert, localisationLink);
             linkContentChecks(softAssert, localisationLink);
@@ -212,11 +241,16 @@ public class MainTest extends BaseTest {
                 String patWord = String.format(".com/%s/", shortDescSubMainMenuLink);
                 Pattern pattern = Pattern.compile(patWord);
                 Matcher linkStructMatcher = pattern.matcher(localisationLink);
-                softAssert.assertFalse(linkStructMatcher.find(), String.format("Localisation link %s is not contain short description %s", localisationLink, shortDescSubMainMenuLink));
+                softAssert.assertFalse(linkStructMatcher.find(),
+                        String.format("Localisation link %s is not contain short description %s", localisationLink, shortDescSubMainMenuLink));
             }
         }
 
-        List<String> globalLinksList = subMainMenuLinks.stream().filter(o -> !o.contains(localisationFiltMean)).filter(x -> x.contains(globalFiltMean)).collect(Collectors.toList());
+        List<String> globalLinksList = mainMenuSubLinks
+                .stream()
+                .filter(o -> !o.contains(localisationFiltMean))
+                .filter(x -> x.contains(globalFiltMean))
+                .toList();
         for (String globalLink : globalLinksList) {
             linkAPIChecks(softAssert, globalLink);
             linkContentChecks(softAssert, globalLink);
@@ -225,11 +259,16 @@ public class MainTest extends BaseTest {
                 String patWord = String.format(".com/%s/", shortDescSubMainMenuLink);
                 Pattern pattern = Pattern.compile(patWord);
                 Matcher linkStructMatcher = pattern.matcher(globalLink);
-                softAssert.assertFalse(linkStructMatcher.find(), String.format("Global link %s is not contain short description %s", globalLink, shortDescSubMainMenuLink));
+                softAssert.assertFalse(linkStructMatcher.find(),
+                        String.format("Global link %s is not contain short description %s", globalLink, shortDescSubMainMenuLink));
             }
         }
 
-        List<String> externalLinksList = subMainMenuLinks.stream().filter(o -> !o.contains(localisationFiltMean)).filter(x -> !x.contains(globalFiltMean)).collect(Collectors.toList());
+        List<String> externalLinksList = mainMenuSubLinks
+                .stream()
+                .filter(o -> !o.contains(localisationFiltMean))
+                .filter(x -> !x.contains(globalFiltMean))
+                .toList();
         for (String externalLink : externalLinksList) {
             linkAPIChecks(softAssert, externalLink);
             linkContentChecks(softAssert, externalLink);
@@ -240,38 +279,46 @@ public class MainTest extends BaseTest {
     @Test(description = "Check navigation header utility links with selected languages", enabled = true)
     public void navigationHeaderUtilityLinksSpecLanguageTest() {
         SoftAssert softAssert = new SoftAssert();
-        HomePage homePage = new HomePage(getDriver());
-        homePage.openHomePage(URL);
-        String currentLanguage = homePage.getLanguageText();
-        List<String> shortHeaderUtilityDescriptionsList = new ArrayList<String>();
+        getDriver().get(URL);
+        LanguageChooser languageChooser = new LanguageChooser(getDriver());
+        String currentLanguage = languageChooser.getSelectedLanguageText();
+        List<String> shortHeaderUtilityDescriptionsList = new ArrayList<>();
         for (LangValue language : LangValue.values()) {
-            if (language.languageValue.equals(currentLanguage) | language.languageValue.equals(LangValue.INDIAN.languageValue))
+            if (language.name.equals(currentLanguage) | language.name.equals(INDIAN.name))
                 continue;
-            String currentLangShortDesc = language.langMeaning;
-            LOGGER.info(String.format("Next language for set: %s", language.languageValue));
-            homePage.setLanguage(language.languageValue);
-            String ma = homePage.getLanguageText();
+            String currentLangShortDesc = language.code;
+            LOGGER.info(String.format("Next language for set: %s", language.name));
+            languageChooser.selectLanguage(language.name);
+            String ma = languageChooser.getSelectedLanguageText();
 
             LOGGER.info(String.format("Updated language value: %s", ma));
-            softAssert.assertTrue(ma.contains(language.languageValue), String.format("Language %S doesn't set", ma));
+            softAssert.assertTrue(ma.contains(language.name), String.format("Language %S doesn't set", ma));
             for (LangValue languageMeaning : LangValue.values()) {
-                if (languageMeaning.languageValue.equals(currentLanguage) || languageMeaning.languageValue.equals(LangValue.INDIAN.languageValue) || languageMeaning.languageValue.equals((LangValue.ENGLISH.languageValue)))
+                if (languageMeaning.name.equals(currentLanguage) || languageMeaning.equals(INDIAN) || languageMeaning.equals((ENGLISH)))
                     continue;
-                shortHeaderUtilityDescriptionsList.add(languageMeaning.langMeaning);
+                shortHeaderUtilityDescriptionsList.add(languageMeaning.code);
             }
             currentLanguage = ma;
-            NavigationHeaderUtilityPage navigationHeaderUtilityPage = new NavigationHeaderUtilityPage(getDriver());
-            List<String> utilityHeaderLinks = navigationHeaderUtilityPage.getUtilityLinks();
-            utilityHeaderLinks.add(navigationHeaderUtilityPage.getLoginLink());
+            NavigationUtilityHeader navigationUtilityHeader = new NavigationUtilityHeader(getDriver());
+            LoginLink loginLink = new LoginLink(getDriver());
+            List<String> utilityHeaderLinks = new ArrayList<>(navigationUtilityHeader.getUtilityHeaderLinks());
+            utilityHeaderLinks.add(loginLink.getLoginUrl());
             String localisationFiltMean = String.format(".com/%s/", currentLangShortDesc);
             String globalFiltMean = "nutanix.";
-            List<String> localisationLinksList = utilityHeaderLinks.stream().filter(o -> o.contains(localisationFiltMean)).collect(Collectors.toList());
+            List<String> localisationLinksList = utilityHeaderLinks
+                    .stream()
+                    .filter(o -> o.contains(localisationFiltMean))
+                    .toList();
             for (String localsationLink : localisationLinksList) {
                 linkAPIChecks(softAssert, localsationLink);
                 linkContentChecks(softAssert, localsationLink);
             }
 
-            List<String> globalLinksList = utilityHeaderLinks.stream().filter(o -> !o.contains(localisationFiltMean)).filter(x -> x.contains(globalFiltMean)).collect(Collectors.toList());
+            List<String> globalLinksList = utilityHeaderLinks
+                    .stream()
+                    .filter(o -> !o.contains(localisationFiltMean))
+                    .filter(x -> x.contains(globalFiltMean))
+                    .toList();
             for (String globalLink : globalLinksList) {
                 linkAPIChecks(softAssert, globalLink);
                 linkContentChecks(softAssert, globalLink);
@@ -279,12 +326,17 @@ public class MainTest extends BaseTest {
                     String patWord = ".com/" + shortDesc;
                     Pattern pattern = Pattern.compile(patWord);
                     Matcher linkStructMatcher = pattern.matcher(globalLink);
-                    softAssert.assertFalse(linkStructMatcher.find(), String.format("Link %s contains short description %s", globalLink, shortDesc));
+                    softAssert.assertFalse(linkStructMatcher.find(),
+                            String.format("Link %s contains short description %s", globalLink, shortDesc));
                 }
             }
             shortHeaderUtilityDescriptionsList.clear();
 
-            List<String> externalLinksList = utilityHeaderLinks.stream().filter(o -> !o.contains(localisationFiltMean)).filter(x -> !x.contains(globalFiltMean)).collect(Collectors.toList());
+            List<String> externalLinksList = utilityHeaderLinks
+                    .stream()
+                    .filter(o -> !o.contains(localisationFiltMean))
+                    .filter(x -> !x.contains(globalFiltMean))
+                    .toList();
             for (String externalLink : externalLinksList) {
                 linkAPIChecks(softAssert, externalLink);
                 linkContentChecks(softAssert, externalLink);
@@ -296,40 +348,47 @@ public class MainTest extends BaseTest {
     @Test(description = "Check main navigation links with selected languages", enabled = true)
     public void navigationMainLinksSpecLanguageTest() {
         SoftAssert softAssert = new SoftAssert();
-        HomePage homePage = new HomePage(getDriver());
-        homePage.openHomePage(URL);
-        String currentLanguage = homePage.getLanguageText();
+        LanguageChooser languageChooser = new LanguageChooser(getDriver());
+        getDriver().get(URL);
+        String currentLanguage = languageChooser.getSelectedLanguageText();
 
-        List<String> shortMainMenuDescriptionsList = new ArrayList<String>();
+        List<String> shortMainMenuDescriptionsList = new ArrayList<>();
         LOGGER.info(String.format("Current language is %s", currentLanguage));
         for (LangValue language : LangValue.values()) {
-            if (language.languageValue.equals(currentLanguage) || language.languageValue.equals(LangValue.INDIAN.languageValue))
+            if (language.name.equals(currentLanguage) || language.name.equals(INDIAN.name))
                 continue;
-            LOGGER.info(String.format("Next language for set: %s", language.languageValue));
-            homePage.setLanguage(language.languageValue);
-            String ma = homePage.getLanguageText();
-            String shortDescrSelectedLanguage = language.langMeaning;
+            LOGGER.info(String.format("Next language for set: %s", language.name));
+            languageChooser.selectLanguage(language.name);
+            String ma = languageChooser.getSelectedLanguageText();
+            String shortDescrSelectedLanguage = language.code;
             LOGGER.info(String.format("Updated language value: %s", ma));
-            softAssert.assertTrue(ma.contains(language.languageValue), String.format("Language %S doesn't set", ma));
+            softAssert.assertTrue(ma.contains(language.name), String.format("Language %S doesn't set", ma));
             currentLanguage = ma;
             for (LangValue languageMeaning : LangValue.values()) {
-                if (languageMeaning.languageValue.equals(currentLanguage) || languageMeaning.languageValue.equals(LangValue.INDIAN.languageValue) || languageMeaning.languageValue.equals((LangValue.ENGLISH.languageValue)))
+                if (languageMeaning.name.equals(currentLanguage) || languageMeaning.equals(INDIAN) || languageMeaning.equals((ENGLISH)))
                     continue;
-                shortMainMenuDescriptionsList.add(languageMeaning.langMeaning);
+                shortMainMenuDescriptionsList.add(languageMeaning.code);
             }
 
-            NavigationMainPage navigationMainPage = new NavigationMainPage(getDriver());
-            List<String> mainMenuLinks = navigationMainPage.getMainNavigationLinks();
+            MainNavigationHeader mainNavigationHeader = new MainNavigationHeader(getDriver());
+            List<String> mainMenuLinks = mainNavigationHeader.getNavigationTabNames();
 
             String localisationFiltMean = String.format(".com/%s/", shortDescrSelectedLanguage);
             String globalFiltMean = "nutanix.";
 
-            List<String> localisationLinksList = mainMenuLinks.stream().filter(o -> o.contains(localisationFiltMean)).collect(Collectors.toList());
+            List<String> localisationLinksList = mainMenuLinks
+                    .stream()
+                    .filter(o -> o.contains(localisationFiltMean))
+                    .toList();
             for (String localisationLink : localisationLinksList) {
                 linkAPIChecks(softAssert, localisationLink);
                 linkContentChecks(softAssert, localisationLink);
             }
-            List<String> globalLinksList = mainMenuLinks.stream().filter(o -> !o.contains(localisationFiltMean)).filter(x -> x.contains(globalFiltMean)).collect(Collectors.toList());
+            List<String> globalLinksList = mainMenuLinks
+                    .stream()
+                    .filter(o -> !o.contains(localisationFiltMean))
+                    .filter(x -> x.contains(globalFiltMean))
+                    .toList();
             for (String globalLink : globalLinksList) {
                 linkAPIChecks(softAssert, globalLink);
                 linkContentChecks(softAssert, globalLink);
@@ -338,11 +397,16 @@ public class MainTest extends BaseTest {
                     String patWord = ".com/" + shortDesc;
                     Pattern pattern = Pattern.compile(patWord);
                     Matcher linkStructMatcher = pattern.matcher(globalLink);
-                    softAssert.assertFalse(linkStructMatcher.find(), String.format("Link %s is not contain short description %s", mainMenuLinks, shortDesc));
+                    softAssert.assertFalse(linkStructMatcher.find(),
+                            String.format("Link %s is not contain short description %s", mainMenuLinks, shortDesc));
                 }
             }
             shortMainMenuDescriptionsList.clear();
-            List<String> externalLinksList = mainMenuLinks.stream().filter(o -> !o.contains(localisationFiltMean)).filter(x -> !x.contains(globalFiltMean)).collect(Collectors.toList());
+            List<String> externalLinksList = mainMenuLinks
+                    .stream()
+                    .filter(o -> !o.contains(localisationFiltMean))
+                    .filter(x -> !x.contains(globalFiltMean))
+                    .toList();
             for (String externalLink : externalLinksList) {
                 linkAPIChecks(softAssert, externalLink);
                 linkContentChecks(softAssert, externalLink);
@@ -354,40 +418,52 @@ public class MainTest extends BaseTest {
     @Test(description = "Check sub main navigation links with selected languages", enabled = true)
     public void navigationMainSubLinksSpecLanguageTest() {
         SoftAssert softAssert = new SoftAssert();
-        HomePage homePage = new HomePage(getDriver());
-        homePage.openHomePage(URL);
-        String currentLanguage = homePage.getLanguageText();
+        LanguageChooser languageChooser = new LanguageChooser(getDriver());
+        getDriver().get(URL);
+        String currentLanguage = languageChooser.getSelectedLanguageText();
 
         List<String> shortMainMenuDescriptionsList = new ArrayList<String>();
         LOGGER.info(String.format("Current language is %s", currentLanguage));
         for (LangValue language : LangValue.values()) {
-            if (language.languageValue.equals(currentLanguage) || language.languageValue.equals(LangValue.INDIAN.languageValue))
+            if (language.name.equals(currentLanguage) || language.name.equals(INDIAN.name))
                 continue;
-            LOGGER.info(String.format("Next language for set: %s", language.languageValue));
-            homePage.setLanguage(language.languageValue);
-            String ma = homePage.getLanguageText();
-            String shortDescrSelectedLanguage = language.langMeaning;
+            LOGGER.info(String.format("Next language for set: %s", language.name));
+            languageChooser.selectLanguage(language.name);
+            String ma = languageChooser.getSelectedLanguageText();
+            String shortDescrSelectedLanguage = language.code;
             LOGGER.info(String.format("Updated language value: %s", ma));
-            softAssert.assertTrue(ma.contains(language.languageValue), String.format("Language %S doesn't set", ma));
+            softAssert.assertTrue(ma.contains(language.name), String.format("Language %S doesn't set", ma));
             currentLanguage = ma;
             for (LangValue languageMeaning : LangValue.values()) {
-                if (languageMeaning.languageValue.equals(currentLanguage) || languageMeaning.languageValue.equals(LangValue.INDIAN.languageValue) || languageMeaning.languageValue.equals((LangValue.ENGLISH.languageValue)))
+                if (languageMeaning.name.equals(currentLanguage) || languageMeaning.equals(INDIAN) || languageMeaning.equals(ENGLISH))
                     continue;
-                shortMainMenuDescriptionsList.add(languageMeaning.langMeaning);
+                shortMainMenuDescriptionsList.add(languageMeaning.code);
             }
-            NavigationMainPage navigationMainPage = new NavigationMainPage(getDriver());
-            List<String> subMainMenuLinks = navigationMainPage.getMainNavigationSubLinks();
+            MainNavigationHeader mainNavigationHeader = new MainNavigationHeader(getDriver());
+            List<String> navigationTabNames = mainNavigationHeader.getNavigationTabNames();
+            List<String> mainMenuSubLinks = navigationTabNames
+                    .stream()
+                    .map(mainNavigationHeader::getNavigationTabSubLinks)
+                    .flatMap(Collection::stream)
+                    .toList();
 
             String localisationFiltMean = String.format(".com/%s/", shortDescrSelectedLanguage);
             String globalFiltMean = "nutanix.";
 
-            List<String> localisationLinksList = subMainMenuLinks.stream().filter(o -> o.contains(localisationFiltMean)).collect(Collectors.toList());
+            List<String> localisationLinksList = mainMenuSubLinks
+                    .stream()
+                    .filter(o -> o.contains(localisationFiltMean))
+                    .toList();
             for (String localisationLink : localisationLinksList) {
                 linkAPIChecks(softAssert, localisationLink);
                 linkContentChecks(softAssert, localisationLink);
             }
 
-            List<String> globalLinksList = subMainMenuLinks.stream().filter(o -> !o.contains(localisationFiltMean)).filter(x -> x.contains(globalFiltMean)).collect(Collectors.toList());
+            List<String> globalLinksList = mainMenuSubLinks
+                    .stream()
+                    .filter(o -> !o.contains(localisationFiltMean))
+                    .filter(x -> x.contains(globalFiltMean))
+                    .toList();
             for (String globalLink : globalLinksList) {
                 linkAPIChecks(softAssert, globalLink);
                 linkContentChecks(softAssert, globalLink);
@@ -397,13 +473,18 @@ public class MainTest extends BaseTest {
                     String patWord = String.format(".com/%s/", shortDesc);
                     Pattern pattern = Pattern.compile(patWord);
                     Matcher linkStructMatcher = pattern.matcher(globalLink);
-                    softAssert.assertFalse(linkStructMatcher.find(), String.format("Link %s is not contain short description %s", globalLink, shortDesc));
+                    softAssert.assertFalse(linkStructMatcher.find(),
+                            String.format("Link %s is not contain short description %s", globalLink, shortDesc));
                 }
 
             }
-            List<String> externalLinksList = subMainMenuLinks.stream().filter(o -> !o.contains(localisationFiltMean)).filter(x -> !x.contains(globalFiltMean)).collect(Collectors.toList());
+            List<String> externalLinksList = mainMenuSubLinks
+                    .stream()
+                    .filter(o -> !o.contains(localisationFiltMean))
+                    .filter(x -> !x.contains(globalFiltMean))
+                    .toList();
             if (externalLinksList.isEmpty()) {
-                LOGGER.info(String.format("External links links is empty, size: %s", externalLinksList.size()));
+                LOGGER.info("External links links is empty");
             } else {
                 for (String externalLink : externalLinksList) {
                     linkAPIChecks(softAssert, externalLink);
